# modio-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  docs.yml
.travis/: docs.sh
examples/: README.md  auth.rs  authentication.rs  details.rs  download.rs  events.rs  join.rs  mymods.rs  request_token.rs  upload.rs
master/: crates.js  search-index.js  settings.html
master/modio/: all.html  enum.Deletion.html  enum.Editing.html  index.html  struct.Builder.html  struct.Error.html  struct.Modio.html  struct.Page.html  struct.Query.html  type.Result.html
master/modio/auth/: enum.Error.html  enum.Service.html  index.html  sidebar-items.js  struct.Auth.html  struct.AuthOptions.html  struct.Credentials.html  struct.DiscordOptions.html  struct.GalaxyOptions.html  struct.GoogleOptions.html  struct.ItchioOptions.html  struct.Link.html  struct.LinkOptions.html  struct.Links.html  struct.OculusOptions.html  struct.SteamOptions.html  struct.SwitchOptions.html  struct.Terms.html  struct.Token.html  struct.XboxOptions.html
master/modio/comments/: index.html  struct.Comment.html  struct.Comments.html
master/modio/download/: enum.DownloadAction.html  enum.Error.html  enum.ResolvePolicy.html  index.html  struct.Downloader.html
master/modio/files/: index.html  struct.AddFileOptions.html  struct.Download.html  struct.EditFileOptions.html  struct.File.html  struct.FileHash.html  struct.FileRef.html  struct.Files.html
master/modio/filter/: enum.OneOrMany.html  enum.Operator.html  fn.custom_filter.html  fn.custom_order_by_asc.html  fn.custom_order_by_desc.html  index.html  struct.Filter.html  trait.BitwiseAnd.html  trait.Cmp.html  trait.Eq.html  trait.In.html  trait.Like.html  trait.NotEq.html  trait.NotIn.html  trait.NotLike.html  trait.OrderBy.html
master/modio/games/: enum.CurationOption.html  enum.MaturityOptions.html  enum.PresentationOption.html  enum.Status.html  enum.SubmissionOption.html  enum.TagType.html  index.html  struct.AddTagsOptions.html  struct.ApiAccessOptions.html  struct.CommunityOptions.html  struct.DeleteTagsOptions.html  struct.Downloads.html  struct.EditGameOptions.html  struct.EditMediaOptions.html  struct.Game.html  struct.GameRef.html  struct.Games.html  struct.HeaderImage.html  struct.Icon.html  struct.Logo.html  struct.RevenueOptions.html  struct.Statistics.html  struct.TagOption.html  struct.Tags.html
master/modio/metadata/: index.html  struct.Metadata.html  struct.MetadataMap.html
master/modio/mods/: enum.EventType.html  enum.Rating.html  enum.Status.html  enum.Visibility.html  index.html  struct.AddMediaOptions.html  struct.AddModOptions.html  struct.DeleteMediaOptions.html  struct.Dependencies.html  struct.Dependency.html  struct.EditDependenciesOptions.html  struct.EditModOptions.html  struct.EditTagsOptions.html  struct.Event.html  struct.Image.html  struct.Logo.html  struct.MaturityOption.html  struct.Media.html  struct.Mod.html  struct.ModRef.html  struct.Mods.html  struct.Popularity.html  struct.Ratings.html  struct.Statistics.html  struct.Tag.html  struct.Tags.html
master/modio/reports/: enum.ReportType.html  enum.Resource.html  index.html  struct.Report.html  struct.Reports.html
master/modio/teams/: enum.TeamLevel.html  index.html  struct.EditTeamMemberOptions.html  struct.InviteTeamMemberOptions.html  struct.Members.html  struct.TeamMember.html
master/modio/user/: enum.EventType.html  enum.Rating.html  index.html  struct.Avatar.html  struct.Event.html  struct.Me.html  struct.User.html
master/src/modio/: auth.rs.html  client.rs.html  comments.rs.html  download.rs.html  error.rs.html  files.rs.html  filter.rs.html  lib.rs.html  (+12 more)
src/: auth.rs  client.rs  comments.rs  download.rs  error.rs  errors.rs  file_source.rs  files.rs  filter.rs  games.rs  iter.rs  lib.rs  loader.rs  macros.rs  me.rs  metadata.rs  mods.rs  multipart.rs  reports.rs  request.rs  routing.rs  teams.rs  types.rs  user.rs  users.rs
src/client/: builder.rs  conn.rs  host.rs  methods.rs  mod.rs  service.rs
src/request/: body.rs  filter.rs  mod.rs  routing.rs  submit_report.rs  util.rs
src/response/: error.rs  future.rs  mod.rs
src/types/: auth.rs  files.rs  games.rs  id.rs  macros.rs  mod.rs  mods.rs  utils.rs
src/util/: data_from_request.rs  mod.rs  pagination.rs
tests/: query.rs
tests/fixtures/: games-page1.json  games-page2.json  games-page3.json  games-page4.json  games-page5.json
v0.5.0/: search-index.js  settings.html
v0.5.0/modio/: all.html  enum.Deletion.html  index.html  sidebar-items.js  type.Result.html
v0.5.1/: index.html  search-index.js
v0.5.1/modio/: enum.Deletion.html  enum.Editing.html  index.html  struct.Builder.html  struct.Error.html  struct.Modio.html  struct.Page.html  struct.Query.html
v0.5.2/: search-index.js  settings.html
v0.5.2/modio/: all.html  enum.Editing.html  struct.Error.html  struct.Modio.html
v0.6.0/: search-index.js
v0.6.0/modio/: all.html  index.html  struct.Error.html  struct.Modio.html  struct.Page.html  struct.Query.html  type.Result.html
v0.6.1/: search-index.js
v0.6.1/modio/: all.html  enum.Deletion.html  enum.Editing.html  struct.Modio.html  struct.Page.html  type.Result.html
v0.6.2/: source-files.js
v0.6.2/modio/: all.html  enum.Editing.html  index.html  struct.Error.html  struct.Modio.html  struct.Page.html  struct.Query.html
(+1488 files in other folders)
