[package]
name = "modio"
version = "0.7.1" # don't forget to update html_root_url
description = "Rust interface for integrating https://mod.io - a modding API for game developers"
repository = "https://github.com/nickelc/modio-rs"
license = "MIT OR Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "client"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"
rust-version = "1.56"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
bitflags = "1.3"
bytes = "1.0"
futures-core = "0.3.4"
futures-util = { version = "0.3.4", features = ["sink"] }
http = "0.2"
mime = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["multipart", "stream"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0.139"
tokio = { version = "1.6.1", default-features = false, features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"
httptest = "0.15"
md5 = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/native-tls", "__tls"]
rustls-tls = ["reqwest/rustls-tls", "__tls"]

# Internal features
__tls = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
