[package]
name = "modio"
version = "0.11.0" # don't forget to update html_root_url
description = "Rust interface for integrating https://mod.io - a modding API for game developers"
repository = "https://github.com/nickelc/modio-rs"
license = "MIT OR Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "client"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2021"
rust-version = "1.64"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
bitflags = "2.8.0"
bytes = "1.9.0"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.2.0"
mime = "0.3.17"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.12", default-features = false, features = ["multipart", "stream"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", default-features = false, features = ["fs"] }
tokio-util = { version = "0.7.13", features = ["codec", "io"] }
tracing = "0.1.40"
url = "2.5.4"

[dev-dependencies]
dotenv = "0.15.0"
httptest = "0.16.1"
md5 = "0.7.0"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/native-tls", "__tls"]
rustls-tls = ["reqwest/rustls-tls", "__tls"]

# Internal features
__tls = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
