[package]
name = "modio"
version = "0.14.1" # don't forget to update html_root_url
description = "Rust interface for integrating https://mod.io - a modding API for game developers"
repository = "https://github.com/nickelc/modio-rs"
license = "MIT OR Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "client"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2021"
rust-version = "1.83"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
default = ["rustls-native-roots"]
native-tls = ["dep:hyper-tls"]
rustls-native-roots = ["dep:hyper-rustls", "hyper-rustls?/native-tokio"]
rustls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls?/webpki-tokio"]
trace = ["tower-http/trace"]

[dependencies]
bitflags = "2.8.0"
bytes = "1.9.0"
futures-util = { version = "0.3.31", default-features = false }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.1"
pin-project-lite = "0.2.16"
percent-encoding = "2.3.1"
url = "2.5.4"
uuid = { version = "1.18.1", features = ["serde"] }
mime = "0.3.17"
tokio = { version = "1.43.0", default-features = false, features = ["fs", "io-util"] }
tokio-util = { version = "0.7.13", default-features = false }

# http
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.10", default-features = false, features = ["client-legacy", "http1", "tokio"] }
tower = { version = "0.5.1", default-features = false, features = ["buffer", "util"] }
tower-http = { version = "0.6.2", default-features = false, features = ["compression-br", "decompression-br", "follow-redirect", "util"] }

# tls
hyper-rustls = { version = "0.27.3", optional = true, default-features = false, features = ["http1", "ring"] }
hyper-tls = { version = "0.6.0", optional = true }

[dev-dependencies]
dotenv = "0.15.0"
md5 = "0.8.0"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
